# o3de-repo

./: README.md  repo.json
Gems/AWSClientAuth/Code/: CMakeLists.txt
Gems/AWSCore/: gem.json
Gems/AWSCore/Code/: CMakeLists.txt
Gems/AWSCore/Code/Source/: AWSCoreSystemComponent.cpp
Gems/AWSCore/Code/Source/Configuration/: AWSCoreConfiguration.cpp
Gems/AWSCore/Code/Tests/: AWSCoreSystemComponentTest.cpp
Gems/AWSCore/Code/Tests/Configuration/: AWSCoreConfigurationTest.cpp
Gems/AWSGameLift/Code/AWSGameLiftClient/: CMakeLists.txt
Gems/AWSNativeSDKInit/: CMakeLists.txt  gem.json
Gems/AWSNativeSDKInit/Code/: CMakeLists.txt  awsnativesdkinit_api_files.cmake  awsnativesdkinit_editor_private_files.cmake  awsnativesdkinit_editor_shared_files.cmake  awsnativesdkinit_editor_tests_files.cmake  awsnativesdkinit_private_files.cmake  awsnativesdkinit_shared_files.cmake  awsnativesdkinit_tests_files.cmake  awsnativesdkinit_tests_library_files.cmake
Gems/AWSNativeSDKInit/Code/Include/AWSNativeSDKInit/: AWSNativeSDKInitBus.h
Gems/AWSNativeSDKInit/Code/Platform/Android/: InitializeCerts_Android.cpp  awsnativesdkinit_private_files.cmake  awsnativesdkinit_shared_files.cmake
Gems/AWSNativeSDKInit/Code/Platform/Linux/: PAL_linux.cmake  awsnativesdkinit_shared_files.cmake  (+1 more)
Gems/AWSNativeSDKInit/Code/Source/: AWSNativeSDKInitModuleInterface.cpp  AWSNativeSDKInitModuleInterface.h
Gems/AWSNativeSDKInit/Registry/: assetprocessor_settings.setreg
Gems/HttpRequestor/: gem.json
Gems/HttpRequestor/Code/: CMakeLists.txt
Gems/HttpRequestor/Code/Source/: HttpRequestManager.cpp  HttpRequestorSystemComponent.cpp
Gems/Umbra/: CMakeLists.txt  NOTICE  README.md  gem.json
Gems/Umbra/Assets/: test.umbrascene
Gems/Umbra/Code/: CMakeLists.txt  umbra_api_files.cmake  umbra_editor_api_files.cmake  umbra_editor_private_files.cmake  umbra_editor_shared_files.cmake  umbra_editor_tests_files.cmake  umbra_private_files.cmake  umbra_shared_files.cmake  umbra_tests_files.cmake
Gems/Umbra/Code/Include/Umbra/: UmbraBus.h  UmbraTypeIds.h
Gems/Umbra/Code/Include/Umbra/UmbraLevelComponent/: UmbraLevelComponentBus.h  UmbraLevelComponentConfig.h  UmbraLevelComponentConstants.h
Gems/Umbra/Code/Include/Umbra/UmbraObjectComponent/: UmbraObjectComponentBus.h  UmbraObjectComponentConfig.h  UmbraObjectComponentConstants.h
Gems/Umbra/Code/Include/Umbra/UmbraSceneAsset/: UmbraObjectDescriptor.h  UmbraSceneAsset.h  UmbraSceneSettings.h
Gems/Umbra/Code/Include/Umbra/UmbraSceneComponent/: EditorUmbraSceneComponentBus.h  UmbraSceneComponentBus.h  UmbraSceneComponentConfig.h  UmbraSceneComponentConstants.h
Gems/Umbra/Code/Include/Umbra/UmbraSystemComponent/: UmbraSystemComponentBus.h  UmbraSystemComponentConfig.h  UmbraSystemComponentConstants.h
Gems/Umbra/Code/Include/Umbra/UmbraTomeAsset/: UmbraTomeAsset.h
Gems/Umbra/Code/Include/Umbra/UmbraViewVolumeComponent/: UmbraViewVolumeComponentBus.h  UmbraViewVolumeComponentConfig.h  UmbraViewVolumeComponentConstants.h
Gems/Umbra/Code/Platform/Android/: PAL_android.cmake  umbra_shared_files.cmake
Gems/Umbra/Code/Platform/Linux/: PAL_linux.cmake  umbra_editor_api_files.cmake  umbra_private_files.cmake
Gems/Umbra/Code/Platform/Mac/: PAL_mac.cmake  umbra_private_files.cmake
Gems/Umbra/Code/Platform/Windows/: PAL_windows.cmake  umbra_private_files.cmake
Gems/Umbra/Code/Platform/iOS/: PAL_ios.cmake  umbra_private_files.cmake  umbra_shared_files.cmake
Gems/Umbra/Code/Source/: UmbraEditorModule.cpp  UmbraModule.cpp  UmbraModuleInterface.cpp  UmbraModuleInterface.h
Gems/Umbra/Code/Source/Clients/: UmbraAsset.cpp  UmbraAsset.h  UmbraComponent.cpp  UmbraComponent.h  UmbraComponentController.cpp  UmbraComponentController.h  UmbraModule.cpp  UmbraSystemComponent.cpp  UmbraSystemComponent.h
Gems/Umbra/Code/Source/Tools/: EditorUmbraComponent.cpp  EditorUmbraComponent.h  UmbraAssetBuilder.cpp  UmbraAssetBuilder.h  UmbraAssetBuilderComponent.cpp  UmbraAssetBuilderComponent.h  UmbraEditorModule.cpp  UmbraEditorSystemComponent.cpp  UmbraEditorSystemComponent.h
Gems/Umbra/Code/Source/UmbraLevelComponent/: EditorUmbraLevelComponent.cpp  EditorUmbraLevelComponent.h  EditorUmbraLevelComponentUtil.cpp  EditorUmbraLevelComponentUtil.h  UmbraLevelComponent.cpp  UmbraLevelComponent.h  UmbraLevelComponentConfig.cpp  UmbraLevelComponentController.cpp  UmbraLevelComponentController.h
Gems/Umbra/Code/Source/UmbraObjectComponent/: EditorUmbraObjectComponent.cpp  EditorUmbraObjectComponent.h  EditorUmbraObjectComponentUtil.cpp  UmbraObjectComponent.cpp  UmbraObjectComponent.h  UmbraObjectComponentConfig.cpp  UmbraObjectComponentController.cpp  UmbraObjectComponentController.h
Gems/Umbra/Code/Source/UmbraSceneAsset/: UmbraObjectDescriptor.cpp  UmbraSceneAsset.cpp  UmbraSceneAssetBuilder.cpp  UmbraSceneAssetBuilder.h  UmbraSceneAssetBuilderComponent.cpp  UmbraSceneAssetBuilderComponent.h  UmbraSceneDescriptor.cpp  UmbraSceneDescriptor.h  UmbraSceneSettings.cpp
Gems/Umbra/Code/Source/UmbraSceneComponent/: EditorUmbraSceneComponent.cpp  EditorUmbraSceneComponent.h  EditorUmbraSceneComponentUtil.cpp  EditorUmbraSceneComponentUtil.h  UmbraSceneComponent.cpp  UmbraSceneComponent.h  UmbraSceneComponentConfig.cpp  UmbraSceneComponentController.cpp  UmbraSceneComponentController.h
Gems/Umbra/Code/Source/UmbraSystemComponent/: EditorUmbraSystemComponent.cpp  EditorUmbraSystemComponent.h  EditorUmbraSystemComponentUtil.cpp  UmbraSystemComponent.cpp  UmbraSystemComponent.h  UmbraSystemComponentConfig.cpp  UmbraSystemComponentController.cpp  UmbraSystemComponentController.h
Gems/Umbra/Code/Source/UmbraTomeAsset/: UmbraTomeAsset.cpp  UmbraTomeAssetBuilder.cpp  UmbraTomeAssetBuilder.h  UmbraTomeAssetBuilderComponent.cpp  UmbraTomeAssetBuilderComponent.h
Gems/Umbra/Code/Source/UmbraViewVolumeComponent/: EditorUmbraViewVolumeComponent.cpp  EditorUmbraViewVolumeComponent.h  EditorUmbraViewVolumeComponentUtil.cpp  UmbraViewVolumeComponent.cpp  UmbraViewVolumeComponent.h  UmbraViewVolumeComponentConfig.cpp  UmbraViewVolumeComponentController.cpp  UmbraViewVolumeComponentController.h
(+24 files in other folders)
